适配两个规范

--- a/dataset_utils/template/category.tmpl
+++ b/dataset_utils/template/category.tmpl
@@ -1,4 +1,4 @@
-请告诉我以下content中的哪些内容，属于{{ keynote}}, 请直接从content中摘抄相关的内容，不要进行其他解释说明。
+请告诉我以下content中的哪些内容，属于{{ keynote}}, 请直接从content中原文摘抄相关的内容，不要进行其他解释说明。
 
 ### content 
 {{ content }}
